--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Le fermier chinois</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <aside class="notification">
+        <p>Vous avez un nouveau message!</p>
+    </aside>
     <header>
         <h1>The story of the chinese farmer</h1>
 
         <blockquote> <i>
                 Is it a <span class="good">good</span> thing? Is that a <span class="bad ">bad
                 </span> thing? I don't know. <br>
-                <cite> May 11, 2016,</cite>
-                <footer> Alexandre Gorius</footer>
+                <cite> May 11, 2016,</cite> <br>
+                Alexandre Gorius
             </i>
         </blockquote>
 
@@ -25,77 +29,109 @@
                 <span class="good">good</span> nor <span class="bad ">bad</span>, but a potential in
                 permanent development.</i></blockquote>
 
-        <h3>In life, there are 4 types of people.</h3>
-
-        <ol>
-            <li class="people1">people who think the Internet is <span class="good">good</span>,</li>
-            <li class="people2">people who think the Internet is evil,</li>
-            <li class="people3">people who think the Internet is cats,</li>
-            <li>people who don't think about it.</li>
-        </ol>
+        <div class="flex1">
+            <ol>
+                <li>
+                    <h3>In life, there are 4 types of people.</h3>
+                </li>
+                <li class="people1">people who think the Internet is <span class="good">good</span>,</li>
+                <li class="people2">people who think the Internet is evil,</li>
+                <li class="people3">people who think the Internet is cats,</li>
+                <li>people who don't think about it.</li>
+            </ol>
+            <img class="img1" src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg "
+                alt="photo chelou d'un jet de champagne">
+        </div>
     </header>
     <div>
-        <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg "
-            alt="photo chelou d'un jet de champagne">
 
-        <p>
-            Up in space, turning around, looking at the earth’s face.
-            From that rock’s perspective on Mars or that gaz opinion from Jupiter, nothing cares about your problems.
-            Up there, it’s just not serious, and there’s no such thing as an issue.
-            <br>
-            <br>
-            Down here, the only reality is the one inside our brain. Nothing exists if the brain doesn’t think it.
-            Nothing exists neither if our senses don’t transmit the message. That means that if we mis sense, our
-            reality changes. That’s possible because our perception is limited : you can’t see at 360 degrees for
-            example. If we mis translate the message, our reality changes. If we think it in a way, our reality changes
-            depending on that way. Therefore, if we can change reality that much, everything’s fake.
-            <br>
-            <br>
-            They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull yourself out of
-            that grip and the divine falls from clouds to solid ground, revealing him or herself differently. But the
-            person is the same, you just changed your mind. Everything works like that : it’s not just that you can make
-            your world, it’s that you passively do it anyway.
-        </p>
+        <div class="flex2">
+            <p> <b>
+                    Up in space, turning around, looking at the earth’s face.
+                    From that rock’s perspective on Mars or that gaz opinion from Jupiter, nothing cares about your
+                    problems.
+                    Up there, it’s just not serious, and there’s no such thing as an issue.
+                    <br>
+                    <br>
+                    Down here, the only reality is the one inside our brain. Nothing exists if the brain doesn’t think
+                    it.
+                    Nothing exists neither if our senses don’t transmit the message. That means that if we mis sense,
+                    our
+                    reality changes. That’s possible because our perception is limited : you can’t see at 360 degrees
+                    for
+                    example. If we mis translate the message, our reality changes. If we think it in a way, our reality
+                    changes
+                    depending on that way. Therefore, if we can change reality that much, everything’s fake.
+                    <br>
+                    <br>
+                    They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull
+                    yourself
+                    out of
+                    that grip and the divine falls from clouds to solid ground, revealing him or herself differently.
+                    But
+                    the
+                    person is the same, you just changed your mind. Everything works like that : it’s not just that you
+                    can
+                    make
+                    your world, it’s that you passively do it anyway.
+                </b>
+            </p>
 
-        <img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
-            alt="what does he think about it?">
-
+            <img class="img2"
+                src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
+                alt="what does he think about it?">
+        </div>
         <h2>
             The story
         </h2>
+        <div class="flex3">
 
-        <img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg" alt="the old chinese farmer">
-        <p> 
-            <q class="chinesefarmer"> Once upon a time there was a Chinese farmer whose horse ran away.</q>
-            <q class="villagers">That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your
-                horse has run away. This is most unfortunate.” </q>
-            <q class="chinesefarmer"> The farmer said, “Is it <span class="good">good</span>? Is it <span class="bad ">bad</span>? I don't
-                know.” </q>
-            <q class="villagers"> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came
-                back and said, “Oh, isn’t that
-                lucky. What a great turn of events. You now have eight horses!”</q>
-            <q class="chinesefarmer">The farmer again said, “Is it <span class="good">good</span>? Is it <span class="bad ">bad</span>? I
-                don't know.”
+
+            <img class="img3" src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
+                alt="the old chinese farmer">
+            <p>
+                <q class="chinesefarmer"> Once upon a time there was a Chinese farmer whose horse ran away.</q>
+                <q class="villagers">That evening, all of his neighbors came around to commiserate. They said, “We are
+                    so
+                    sorry to hear your
+                    horse has run away. This is most unfortunate.” </q>
+                <q class="chinesefarmer"> The farmer said, “Is it <span class="good">good</span>? Is it <span
+                        class="bad ">bad</span>? I don't
+                    know.” </q>
+                <q class="villagers"> The next day the horse came back bringing seven wild horses with it, and in the
+                    evening everybody came
+                    back and said, “Oh, isn’t that
+                    lucky. What a great turn of events. You now have eight horses!”</q>
+                <q class="chinesefarmer">The farmer again said, “Is it <span class="good">good</span>? Is it <span
+                        class="bad ">bad</span>? I
+                    don't know.”
+                    <br> <br>
+                    The following day his son tried to break one of the horses, and while riding it, he was thrown and
+                    broke
+                    hisleg.</q>
+                <q class="villagers"> The neighbors then said, “Oh dear, that’s too <span class="bad ">bad</span>,” </q>
+                <q class="chinesefarmer"> and the farmer responded, “Is it <span class="good">good</span>? Is it
+                    <span class="bad ">bad</span>? I don't know.” </q>
+                <q class="villagers"> The next day the conscription officers came around to conscript people into the
+                    army,
+                    and
+                    they
+                    rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t
+                    that
+                    great!”</q>
+                <q class="chinesefarmer"> Again, he said, “Is it <span class="good">good</span>? Is it <span
+                        class="bad ">bad</span>? I
+                    don't know.”</q>
                 <br> <br>
-                The following day his son tried to break one of the horses, and while riding it, he was thrown and broke
-                hisleg.</q>
-            <q class="villagers"> The neighbors then said, “Oh dear, that’s too <span class="bad ">bad</span>,” </q>
-            <q class="chinesefarmer"> and the farmer responded, “Is it <span class="good">good</span>? Is it
-                <span size="+1" class="bad ">bad</span>? I don't know.” </q>
-            <q class="villagers"> The next day the conscription officers came around to conscript people into the army, and
-                they
-                rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that
-                great!”</q>
-            <q class="chinesefarmer"> Again, he said, “Is it <span class="good">good</span>? Is it <span class="bad ">bad</span>? I
-                don't know.”</q>
-            <br> <br>
-            The whole process of nature is an integrated process of immense complexity, and it’s really impossible to
-            tell whether anything that happens in it is <span class="good">good</span> or<span class="bad ">bad</span> —
-            because you never know what will be the consequence of the
-            misfortune; or, you never know what will be the consequences of <span class="good">good</span> fortune.
-        </p>
-        <p>Alan Watts</p>
-
+                The whole process of nature is an integrated process of immense complexity, and it’s really impossible
+                to
+                tell whether anything that happens in it is <span class="good">good</span> or<span
+                    class="bad ">bad</span> —
+                because you never know what will be the consequence of the
+                misfortune; or, you never know what will be the consequences of <span class="good">good</span> fortune.
+            </p>
+            <p>Alan Watts</p>
+        </div>
     </div>
     <div>
         <h3>Here is this dialog in the form of a table</h3>
